--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "node": ">=0.4.7"
   },
   "dependencies": {
-    "neo-async": "^2.6.0",
+    "neo-async": "^2.6.1",
     "source-map": "^0.6.1",
     "yargs": "^3.32.0"
   },
@@ -30,14 +30,14 @@
   },
   "devDependencies": {
     "@knappi/grunt-saucelabs": "^9.0.2",
-    "aws-sdk": "^2.1.49",
+    "aws-sdk": "^2.548.0",
     "babel-loader": "^5.0.0",
     "babel-runtime": "^5.1.10",
     "benchmark": "~1.0",
     "dtslint": "^0.5.5",
     "dustjs-linkedin": "^2.0.2",
     "eco": "~1.1.0-rc-3",
-    "grunt": "^1.0.3",
+    "grunt": "^1.0.4",
     "grunt-babel": "^5.0.0",
     "grunt-bg-shell": "^2.3.3",
     "grunt-cli": "^1",
@@ -50,13 +50,13 @@
     "grunt-contrib-watch": "^1.1.0",
     "grunt-eslint": "^20.1.0",
     "grunt-webpack": "^1.0.8",
-    "istanbul": "kpdecker/istanbul",
+    "istanbul": "github:kpdecker/istanbul",
     "jison": "0.4.16",
-    "mocha": "^5",
+    "mocha": "^6",
     "mock-stdin": "^0.3.0",
-    "mustache": "^2.1.3",
-    "semver": "^5.0.1",
-    "typescript": "^3.4.3",
+    "mustache": "^3.1.0",
+    "semver": "^5.7.1",
+    "typescript": "^3.6.4",
     "underscore": "^1.5.1",
     "webpack": "^1.12.6",
     "webpack-dev-server": "^1.12.1"
