fix: migrate from optimist to yargs closes #1658 adapted code from master to latest yargs (`.option` calls).
```
4.x:
found 188 vulnerabilities (169 low, 4 moderate, 14 high, 1 critical) in 5815 scanned packages

4.x with this PR:
found 32 vulnerabilities (17 low, 1 moderate, 13 high, 1 critical) in 5829 scanned packages
```

--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
   },
   "dependencies": {
     "neo-async": "^2.6.0",
-    "optimist": "^0.6.1",
-    "source-map": "^0.6.1"
+    "source-map": "^0.6.1",
+    "yargs": "^15.3.1"
   },
   "optionalDependencies": {
     "uglify-js": "^3.1.4"
